--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "axios": "^0.24.0",
     "history": "^5.1.0",
     "react": "^17.0.2",
+    "react-device-detect": "^2.1.2",
     "react-dom": "^17.0.2",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-paginate": "^8.0.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
